--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vercel/analytics": "^1.0.1",
     "@vercel/kv": "^0.2.1",
     "@vercel/og": "^0.5.7",
+    "@vercel/postgres": "^0.5.1",
     "ai": "^2.1.6",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.4.0",
